<resources>
    <!-- The string resources will continue to grow, better to separate by screen, using comments like these -->
    <string name="app_name" translatable="false">HouseHunting</string>
    <string name="search" translatable="false">Search</string>
    <string name="amenities" translatable="false">Amenities</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="firstName" translatable="false">First Name</string>
    <string name="lastName" translatable="false">Last Name</string>
    <string name="phone" translatable="false">Phone Number</string>
    <string name="email" translatable="false">Email</string>
    <string name="manageHouse" translatable="false">Manage My Houses</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>

    <!-- String Resources for Sign Up Screen -->
    <string name="Signup" translatable="false">Sign Up</string>
    <string name="Already_have_Account" translatable="false">Already Have An Account?</string>
    <string name="house_hunting_title" translatable="false">House Hunting</string>
    <string name="create_account" translatable="false">Create an account</string>
    <string name="names_hint" translatable="false">Names</string>
    <string name="email_hint" translatable="false">Email</string>
    <string name="phone_hint" translatable="false">Phone</string>
    <string name="password_hint" translatable="false">Password</string>
    <string name="myHouses" translatable="false">isMyHouses</string>

    <!-- ************ OTP Verification ************* -->
    <string name="Sigin_text" translatable="false">Sign In To Continue</string>
    <string name="login_btn" translatable="false">Login</string>

    <!-- OTP Verification -->
    <string name="verification_code" translatable="false">Verification Code</string>
    <string name="action_enter_otp" translatable="false">Please enter the verification code sent to your andrew email</string>
    <string name="verify_email" translatable="false">Verify Code</string>
    <string name="resend_otp" translatable="false">Re-send Code</string>
    <string name="loading" translatable="false">Loading.....</string>
    <string name="currency" translatable="false">rwf</string>
    <string name="month" translatable="false">/monthly</string>
    <string name="rooms" translatable="false">Bedrooms</string>
    <string name="greeting" translatable="false">Hello,</string>
    <string name="no_data_available" translatable="false">no_string</string>
    <string name="foreground" translatable="false">"Service to pull new houses"</string>
    <string name="notificationTitle" translatable="false">New house has been created</string>
    <string name="notificationBody" translatable="false">The newly created house match your preferences, Be the first person to talk to the own!</string>
    <string name="near" translatable="false">Km away from Campus</string>

    <!-- Login -->
    <string name="no_account" translatable="false">Don\'t Have Account?</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


    <!-- ******** register house************-->
    <!-- Author: NGIRIMANA Schadrack -->
    <string name="house_address_label"> House address</string>
    <string name="house_price_label_label"> Price per month</string>
    <string name="house_bedroom_label"> Bedroom</string>
    <string name="house_bathroom_label"> Bathroom</string>
    <string name="house_main_image_label"> Main image</string>
    <string name="house_first_step_btn"> Next</string>
    <string name="house_more_images">More images</string>
    <string name="house_description">Description</string>
    <string name="house_landlord_names">Landlord names</string>
    <string name="house_landlord_contact">Landlord contact</string>
    <string name="house_internet" translatable="false">Internet</string>
    <string name="house_internet_hint" translatable="false">Canal Box</string>
    <string name="house_second_step_btn"> Submit</string>
    <string name="house_location_choice">House Location</string>
    <string name="location_choice" translatable="false">Select Mode</string>
    <string name="current_location_choice" translatable="false">Current Location</string>
    <string name="map_location_choice" translatable="false">Map</string>
    <string name="select_how_to_take_image" translatable="false">Select image</string>

    <string name="canalbox_internet_choice" translatable="false">CanalBox</string>
    <string name="liquid_internet_choice" translatable="false">Liquid</string>
    <string name="mtn_internet_choice" translatable="false">Mtn</string>
    <string name="airtel_internet_choice" translatable="false">Airtel</string>
    <string name="mango_internet_choice" translatable="false">Mango</string>
    <string name="no_internet_choice" translatable="false">No Internet</string>
    <string name="select_language">Select Language</string>

    <!-- ******** register user preference ************-->
    <!-- Author: Yves Ngabonziza -->
    <string name="submit_preference" translatable="false">Submit preference</string>
    <string name="canal_Box" translatable="false">Canal</string>
    <string name="liquid" translatable="false">Liquid</string>
    <string name="MTN" translatable="false">MTN</string>
    <string name="None" translatable="false">None</string>
    <string name="add_preference" translatable="false">Add Preference</string>
    <string name="max_price" translatable="false">Max Price in rwf</string>
    <string name="min_price" translatable="false">Min Price in rwf</string>
    <string name="location" translatable="false">location</string>
    <string name="installed_internet" translatable="false">Installed Internet</string>
    <string name="number_of_bed" translatable="false">Number of Bedrooms</string>
    <string name="map_house_btn" translatable="false">Map</string>
    <string name="book_house_btn" translatable="false">Book now</string>
    <string name="house_map_title" translatable="false">House map location</string>
    <string name="editPref" translatable="false">Edit Preferences</string>



    <!-- Author: NGIRIMANA Schadrack -->
    <string name="name_error" translatable="false">Names are required</string>
    <string name="email_empty_error" translatable="false">Email is required</string>
    <string name="email_type_error" translatable="false">Your should use your andrew email</string>
    <string name="phone_empty_error" translatable="false">Phone number is required</string>
    <string name="phone_country_code_error" translatable="false">Your phone should start with country code</string>
    <string name="password_empty_error" translatable="false">Password is required</string>
    <string name="password_length_error" translatable="false">Password must be minimum 6 characters</string>
    <string name="house_address_error" translatable="false">House address is required</string>
    <string name="house_price_error" translatable="false">Hose price per month  is not valid</string>
    <string name="house_coordinates_error" translatable="false">The location is not available, try other way!</string>
    <string name="house_bathroom_error" translatable="false">House bathroom number  is not valid</string>
    <string name="house_bedroom_error" translatable="false">House bedroom  is not valid</string>
    <string name="house_main_image_error" translatable="false">Please, pick house image</string>
    <string name="house_more_images_error" translatable="false">Please, pick more house images</string>
    <string name="house_internet_error" translatable="false">Choose available internet type</string>
    <string name="house_description_error" translatable="false">House description is required</string>
    <string name="house_landlord_contact_error" translatable="false">Landlord contact is required</string>
    <string name="house_landlord_contact_country_code_error" translatable="false">Landlord contact should start with country code</string>
    <string name="house_land_lord_names_error" translatable="false">Landlord names are required</string>
</resources>