<?xml version="1.0" encoding="utf-8"?>

<!--Author : Yves Ngabonziza-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".fragments.PreferencesFragment">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="297dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_preference"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/minPrice"
        android:layout_width="291dp"
        android:layout_height="42dp"
        android:layout_marginTop="25dp"
        android:hint="@string/min_price"
        android:background="@drawable/login_input"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/maxPrice"
        android:layout_width="291dp"
        android:layout_height="42dp"
        android:layout_marginTop="25dp"
        android:inputType="number"
        android:padding="10dp"
        android:hint="@string/max_price"
        android:background="@drawable/login_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minPrice"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="28dp"
        android:text="@string/installed_internet"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxPrice" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/internet"
        android:layout_width="297dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxPrice"
        app:layout_constraintVertical_bias="0.113"
        tools:ignore="MissingConstraints">

        <CheckBox
            android:id="@+id/mtn"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:text="@string/MTN"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            android:buttonTint="@color/colorPrimary"
            android:textColor="@color/grey"
            tools:layout_editor_absoluteY="34dp" />

        <CheckBox
            android:id="@+id/canal"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:buttonTint="@color/colorPrimary"
            android:textColor="@color/grey"
            android:text="@string/canal_Box"
            app:layout_constraintStart_toEndOf="@+id/mtn"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="34dp" />

        <CheckBox
            android:id="@+id/liquid"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:buttonTint="@color/colorPrimary"
            android:textColor="@color/grey"
            android:text="@string/liquid"
            app:layout_constraintStart_toEndOf="@+id/canal"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="34dp" />

        <CheckBox
            android:id="@+id/none"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:layout_marginStart="3dp"
            android:textColor="@color/grey"
            android:text="@string/None"
            app:layout_constraintStart_toEndOf="@+id/liquid"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="34dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/location"
        android:layout_width="291dp"
        android:layout_height="42dp"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:hint="@string/location"
        android:background="@drawable/login_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/internet"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/numBedRooms"
        android:padding="10dp"
        android:layout_width="291dp"
        android:layout_height="42dp"
        android:layout_marginTop="25dp"
        android:inputType="number"
        android:hint="@string/number_of_bed"
        android:background="@drawable/login_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        tools:ignore="MissingConstraints" />

    <RelativeLayout
        android:id="@+id/submitPreference_btn"
        android:layout_width="291dp"
        android:layout_height="50dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numBedRooms">

        <TextView
            android:id="@+id/submitPreference_btn_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/submit_preference"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/submitPreference_btn_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="8dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:indeterminateTintMode="src_in"
            android:visibility="gone" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>