<?xml version="1.0" encoding="utf-8"?>
<!-- Author: NGIRIMANA Schadrack -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".houseActivities.RegisterHouseSecondStep">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/house_more_images_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_more_images"
            android:layout_marginTop="30dp"
            android:textSize="14dp"
            android:layout_marginHorizontal="30dp"
            />

        <ImageView

            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/house_more_images"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/house_more_images_label"
            android:padding="2dp"
            android:src="@drawable/add_photo"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:id="@+id/house_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="0dp"
            android:layout_below="@+id/house_more_images"
            android:text="@string/house_description"
            android:textSize="14dp"
            />

        <EditText
            android:id="@+id/house_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/house_description_label"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/login_input"
            android:inputType="textMultiLine"
            android:ems="10"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            android:scrollbars="vertical"
            />
        <TextView
            android:id="@+id/house_internet_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="@string/house_internet"
            android:layout_marginHorizontal="30dp"
            android:layout_below="@+id/house_description"
            />
        <Spinner
            android:id="@+id/house_internet"
            android:layout_width="match_parent"
            android:background="@drawable/login_input"
            android:layout_height="50dp"
            android:textSize="16dp"
            android:paddingLeft="10dp"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="30dp"
            android:layout_below="@+id/house_internet_label"
            />
        <TextView
            android:id="@+id/house_landlord_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="@string/house_landlord_names"
            android:layout_marginHorizontal="30dp"
            android:layout_below="@+id/house_internet"
            />
        <EditText
            android:id="@+id/house_landlord_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/login_input"
            android:ems="10"
            android:textSize="16dp"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:layout_below="@+id/house_landlord_name_label"
            />
        <TextView
            android:id="@+id/house_contact_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_landlord_contact"
            android:textSize="14dp"
            android:layout_marginHorizontal="30dp"
            android:layout_below="@+id/house_landlord_name"
            />


        <EditText
            android:id="@+id/house_contact"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/house_contact_label"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_input"
            android:ems="10"
            android:hint="+250789023456"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:textSize="16dp" />

        <Button
            android:id="@+id/house_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/house_contact"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/login_button"

            android:text="@string/house_second_step_btn"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>