<?xml version="1.0" encoding="utf-8"?>
<!--@Athor NGIRIMANA SCHADRACK-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterHouseFirstStep">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/house_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="0dp"
            android:text="@string/house_address_label"
            android:textSize="14dp"
            />
        <EditText
            android:id="@+id/house_address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/login_input"
            android:ems="10"
            android:hint="Kimironko Kwa Nayinzira"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:layout_below="@id/house_address_label"
            android:textSize="16dp"
            />
             <TextView
                 android:id="@+id/house_price_per_month_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="14dp"
                 android:text="@string/house_price_label_label"
                 android:layout_marginHorizontal="30dp"
                 android:layout_below="@id/house_address"
            />
            <EditText
                android:id="@+id/price_per_month"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/login_input"
                android:ems="10"
                android:textSize="16dp"
                android:hint="200,000 Rwf"
                android:inputType="numberDecimal"
                android:paddingLeft="10dp"
                android:layout_below="@+id/house_price_per_month_label"
            />
            <TextView
                android:id="@+id/house_bedroom_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/house_bedroom_label"
                android:textSize="14dp"
                android:layout_marginHorizontal="30dp"
                android:layout_below="@id/price_per_month"
            />
        <EditText
            android:id="@+id/house_bedroom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/login_input"
            android:ems="10"
            android:hint="3"
            android:textSize="16dp"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:layout_below="@id/house_bedroom_label"
            />
        <TextView
            android:id="@+id/house_bathroom_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bathroom"
            android:textSize="14dp"
            android:layout_marginHorizontal="30dp"
            android:layout_below="@id/house_bedroom"
            />
        <EditText
            android:id="@+id/house_bathroom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/login_input"
            android:ems="10"
            android:hint="3"
            android:textSize="16dp"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:layout_below="@id/house_bathroom_label"
            />
        <TextView

            android:id="@+id/house_main_image_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_main_image_label"
            android:textSize="14dp"
            android:layout_marginHorizontal="30dp"
            android:layout_below="@id/house_bathroom"
            />

        <ImageView

            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/house_main_image"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/house_main_image_label"
            android:padding="2dp"

            android:src="@drawable/add_photo"
            android:layout_marginTop="16dp"
            />
        <Button
            android:id="@+id/house_next_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/house_first_step_btn"
            android:textSize="20dp"
            android:background="@drawable/login_button"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_margin="30dp"
            android:layout_below="@+id/house_main_image"

            />
    </RelativeLayout>
</FrameLayout>